--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="MC-u8tvhXYwhu28NlewripDLCSy0DoKouyHUZBL8IP0" />
     <link rel="shortcut icon" href="/assets/icon/logo.ico" type="image/x-icon" />
 </head>
 
