--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <meta name="google-site-verification" content="MC-u8tvhXYwhu28NlewripDLCSy0DoKouyHUZBL8IP0" />
     <link rel="shortcut icon" href="/assets/icon/logo.ico" type="image/x-icon" />
 </head>
 
 <body>
-
-    <nav class="nav scroll-snap">
+    <nav class="nav">
         <div class="box-logo">
             <img class="logo" src="assets/logo.png" alt="logo Benavides e Franco" />
         </div>
@@ -29,7 +27,6 @@
     </nav>
 
     <main>
-
         <div vw class="enabled">
             <div vw-access-button class="active"></div>
             <div vw-plugin-wrapper>
@@ -41,7 +38,7 @@
             <source src="./assets/video/video.mp4" type="video/mp4">
         </video>
 
-        <section class="presentation">
+        <section class="presentation scroll-snap">
             <div class="card">
                 <div class="header">
                     <span>BENAVIDES & FRANCO</span>
@@ -54,40 +51,40 @@
                     Seus direitos assegurados de forma estratégica, ágil e segura.
                 </p>
             </div>
-            <div class="about scroll-snap" >
-                <div class="container" id="about" >
-                    <span class="separator" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true"></span>
-                    <h3 class="title text-xxlarge" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">QUEM SOMOS</h3>
-                    <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
-                        <p class="paragraphy text-large">
-                            Nascemos de um grande, saudável e ambicioso sonho: ser o maior escritório
-                            de advocacia do Rio Grande do Norte. Com profissionalismo,
-                            comprometimento e empatia, em duas décadas, o sonho se tornou realidade.
-                            Impulsionado pelo trabalho do Doutor Cyrus Benavides, Advogado com mais
-                            de 20 anos atuação.
-                        </p>
-                        <p class="paragraphy text-large">
-                            Contudo, há algo mais que nos torna singular: a forma humanizada de atender
-                            empresas e seus representantes — pessoas com muitas responsabilidades e
-                            grandes questões a resolver. Foi com essa maneira de trabalhar que erguemos
-                            o Benavides &amp; Franco Advocacia. A confiança de nossos clientes sempre nos
-                            impulsionou e continua a nos impulsionar. Com eles, buscamos sempre um
-                            atendimento eficaz, justo e objetivo na solução de problemas em todas as
-                            áreas do Direito.
-                        </p>
-                        <p class="paragraphy text-large">
-                            Nossa meta é eliminar burocracias e formalismos e atuar de forma ética e
-                            transparente na avaliação do que é oportuno e necessário para as empresas e
-                            pessoas que depositam em nós sua confiança.
-                        </p>
-                    </div>
+        </section>
+
+        <section class="about scroll-snap">
+            <div class="container" id="about" >
+                <span class="separator" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true"></span>
+                <h3 class="title text-xxlarge" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">QUEM SOMOS</h3>
+                <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                    <p class="paragraphy text-large">
+                        Nascemos de um grande, saudável e ambicioso sonho: ser o maior escritório
+                        de advocacia do Rio Grande do Norte. Com profissionalismo,
+                        comprometimento e empatia, em duas décadas, o sonho se tornou realidade.
+                        Impulsionado pelo trabalho do Doutor Cyrus Benavides, Advogado com mais
+                        de 20 anos atuação.
+                    </p>
+                    <p class="paragraphy text-large">
+                        Contudo, há algo mais que nos torna singular: a forma humanizada de atender
+                        empresas e seus representantes — pessoas com muitas responsabilidades e
+                        grandes questões a resolver. Foi com essa maneira de trabalhar que erguemos
+                        o Benavides &amp; Franco Advocacia. A confiança de nossos clientes sempre nos
+                        impulsionou e continua a nos impulsionar. Com eles, buscamos sempre um
+                        atendimento eficaz, justo e objetivo na solução de problemas em todas as
+                        áreas do Direito.
+                    </p>
+                    <p class="paragraphy text-large">
+                        Nossa meta é eliminar burocracias e formalismos e atuar de forma ética e
+                        transparente na avaliação do que é oportuno e necessário para as empresas e
+                        pessoas que depositam em nós sua confiança.
+                    </p>
                 </div>
-    
             </div>
         </section>
 
-        <section class="management" >
-            <div class="card" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+        <section class="management">
+            <div class="card scroll-snap" >
                 <div class="content">
                     <div class="header">
                         <i class="icon fa-solid fa-bullseye fa-2x"></i>
@@ -95,7 +92,7 @@
                             MISSÃO
                         </h4>
                     </div>
-                    <p class="text scroll-snap">
+                    <p class="text">
                         Entender o negócio e os objetivos de nossos clientes para prestar
                         serviços jurídicos com excelência, completos, consistentes, customizados,
                         ágeis e que contribuam para que os resultados almejados sejam superados.
@@ -113,42 +110,43 @@
                     </p>    
                 </div>
             </div>
-            <div class="values " data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
-                <div class="header">
-                    <h4 class="title text-large">VALORES</h4>
-                </div>
-                <div class="separator">
-                    <i class="fa-solid fa-chevron-down"></i>
-                </div>
-                <div class="content scroll-snap">
-                    <img src="./assets/bg_coluna.webp" alt="arte pilar" class="image-pilar"/>
-                    <div class="overflow">
-                        <div class="text">
-                            <h1 class="value text-subtitle">ÉTICA</h1>
-                        </div>
-                        <div class="text">
-                            <h1 class="value text-subtitle">CONHECIMENTO</h1>
-                        </div>
-                        <div class="text">
-                            <h1 class="value text-subtitle">PESSOAS</h1>
-                        </div>
-                        <div class="text">
-                            <h1 class="value text-subtitle">MERITOCRACIA</h1>
-                        </div>
-                        <div class="text">
-                            <h1 class="value text-subtitle">AGILIDADE</h1>
-                        </div>
-                        <div class="text">
-                            <h1 class="value text-subtitle">SIMPLICIDADE</h1>
-                        </div>
-                        <div class="text">
-                            <h1 class="value text-subtitle">INOVAÇÃO</h1>
-                        </div>
-                    </div>
-                    <img src="./assets/bg_coluna.webp" alt="arte pilar" class="image-pilar"/>
-                </div>
-                <div class="divider-shadow"></div>
+        </section>
+
+        <section class="values " >
+            <div class="header">
+                <h4 class="title text-large">VALORES</h4>
             </div>
+            <div class="separator">
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="content scroll-snap">
+                <img src="./assets/bg_coluna.webp" alt="arte pilar" class="image-pilar"/>
+                <div class="overflow">
+                    <div class="text">
+                        <h1 class="value text-subtitle">ÉTICA</h1>
+                    </div>
+                    <div class="text">
+                        <h1 class="value text-subtitle">CONHECIMENTO</h1>
+                    </div>
+                    <div class="text">
+                        <h1 class="value text-subtitle">PESSOAS</h1>
+                    </div>
+                    <div class="text">
+                        <h1 class="value text-subtitle">MERITOCRACIA</h1>
+                    </div>
+                    <div class="text">
+                        <h1 class="value text-subtitle">AGILIDADE</h1>
+                    </div>
+                    <div class="text">
+                        <h1 class="value text-subtitle">SIMPLICIDADE</h1>
+                    </div>
+                    <div class="text">
+                        <h1 class="value text-subtitle">INOVAÇÃO</h1>
+                    </div>
+                </div>
+                <img src="./assets/bg_coluna.webp" alt="arte pilar" class="image-pilar"/>
+            </div>
+            <div class="divider-shadow"></div>
         </section>
 
         <section class="areas-expertise">
@@ -156,10 +154,10 @@
                 <div class="title" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
                     <h3 class="text-xxlarge">ÁREAS DE ATUAÇÃO</h3>
                 </div>
-                <div class="separator" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true"></div>
+                <div class="separator" ></div>
                 <div class="text" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
-                    <p class="subtitle">Atuação 360° full service</p>
-                    <p class="subtitle text-large scroll-snap">
+                    <p class="subtitle text-large">Atuação 360° full service</p>
+                    <p class="subtitle text-xlarge scroll-snap">
                         Atendemos toda e qualquer demanda de natureza jurídica, nos destacando
                         pela maneira objetiva, correta, moderna e eficaz que adotamos para
                         assessorar nossos clientes a solucionar problemas.
@@ -167,7 +165,7 @@
                 </div>
             </div>
             <div class="acting scroll-snap">
-                <div class="row" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="row" >
                     <div class="card" style="background-image: url(./assets/background-cards/adm.jpg);">
                         <div class="bg">
                             <span class="text-large" >ADMINISTRATIVO</span>
@@ -189,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="row" >
                     <div class="card" style="background-image: url(./assets/background-cards/penal.jpg);">
                         <div class="bg">
                             <span class="text-large">PENAL</span>
@@ -211,7 +209,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="row" >
                     <div class="card" style="background-image: url(./assets/background-cards/tributacao.jpg);">
                         <div class="bg">
                             <span class="text-large">TRIBUTÁRIO</span>
@@ -263,7 +261,7 @@
             </div>
         </section>
 
-        <section class="informations">
+        <section class="informations scroll-snap">
                 <div class="header" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
                     <h3 class="title text-xxlarge" id="contact">FILIAIS</h3>
                     <br/>
@@ -273,8 +271,8 @@
                         Nosso objetivo é expandir e consolidar cada vez mais relações.
                     </p>
                 </div>
-                <div class="container">
-                    <div class="address " data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="container ">
+                    <div class="address " >
                         <h3 class="title">Natal/RN</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3969.188224670329!2d-35.22626518531638!3d-5.829066395776344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b25565117cac5d%3A0xbae8e5e91e226e57!2sR.%20Raimundo%20Chaves%2C%201584%20-%20Candel%C3%A1ria%2C%20Natal%20-%20RN%2C%2059064-368!5e0!3m2!1spt-BR!2sbr!4v1671400567963!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="infos">
@@ -285,7 +283,7 @@
                             <a class="subtitle" href="tel:+55(84)99991-2003"><i class="icon fa-solid fa-phone"></i>+55 (84) 99991-2003</a>
                         </div>
                     </div>
-                    <div class="address" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                    <div class="address" >
                         <h3 class="title">Nova Cruz/RN</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.3100206095983!2d-35.43479105952357!3d-6.482364993334287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ad8fca8ddec199%3A0x8dbe80cc5498ec76!2sR.%20Seis%20de%20Julho%2C%20238%2C%20Nova%20Cruz%20-%20RN%2C%2059215-000!5e0!3m2!1spt-BR!2sbr!4v1671401659688!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="infos">
