--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <section class="about scroll-snap">
             <div class="container" id="about" >
                 <span class="separator" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true"></span>
-                <h3 class="title text-xxlarge" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">QUEM SOMOS</h3>
-                <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <h3 class="title text-xxlarge" data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">QUEM SOMOS</h3>
+                <div data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
                     <p class="paragraphy text-large">
                         Nascemos de um grande, saudável e ambicioso sonho: ser o maior escritório
                         de advocacia do Rio Grande do Norte. Com profissionalismo,
@@ -151,11 +151,11 @@
 
         <section class="areas-expertise">
             <div class="area" id="area">
-                <div class="title" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="title" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
                     <h3 class="text-xxlarge">ÁREAS DE ATUAÇÃO</h3>
                 </div>
                 <div class="separator" ></div>
-                <div class="text" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="text" data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
                     <p class="subtitle text-large">Atuação 360° full service</p>
                     <p class="subtitle text-xlarge scroll-snap">
                         Atendemos toda e qualquer demanda de natureza jurídica, nos destacando
@@ -235,7 +235,7 @@
         </section>
 
         <section class="team scroll-snap" id="team">
-            <div class="description" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+            <div class="description" data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
                 <h3 class="title text-xxlarge">O time Benavides &amp; Franco</h3>
                 <p class="paragraphy text-xlarge">
                     A equipe de advogados do escritório passa por uma rigorosa seleção, a fim de termos
