--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <title>Benavides e Franco</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/assets/icon/logo.ico" type="image/x-icon" />
 </head>
 
@@ -55,9 +53,9 @@
 
         <section class="about scroll-snap">
             <div class="container" id="about" >
-                <span class="separator" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true"></span>
-                <h3 class="title text-xxlarge" data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">QUEM SOMOS</h3>
-                <div data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <span class="separator" ></span>
+                <h3 class="title text-xxlarge" >QUEM SOMOS</h3>
+                <div >
                     <p class="paragraphy text-large">
                         Nascemos de um grande, saudável e ambicioso sonho: ser o maior escritório
                         de advocacia do Rio Grande do Norte. Com profissionalismo,
@@ -151,11 +149,11 @@
 
         <section class="areas-expertise">
             <div class="area" id="area">
-                <div class="title" data-aos="fade" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="title" >
                     <h3 class="text-xxlarge">ÁREAS DE ATUAÇÃO</h3>
                 </div>
                 <div class="separator" ></div>
-                <div class="text" data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="text" >
                     <p class="subtitle text-large">Atuação 360° full service</p>
                     <p class="subtitle text-xlarge scroll-snap">
                         Atendemos toda e qualquer demanda de natureza jurídica, nos destacando
@@ -235,7 +233,7 @@
         </section>
 
         <section class="team scroll-snap" id="team">
-            <div class="description" data-aos="fade-" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+            <div class="description" >
                 <h3 class="title text-xxlarge">O time Benavides &amp; Franco</h3>
                 <p class="paragraphy text-xlarge">
                     A equipe de advogados do escritório passa por uma rigorosa seleção, a fim de termos
@@ -253,7 +251,7 @@
                 </p>
             </div>
             <div class="separator"></div>
-            <div class="message" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+            <div class="message" >
                 <span class="text text-subtitle">
                     Acreditamos no poder da equipe.
                     Sabemos que nada se constrói sozinho.
@@ -262,7 +260,7 @@
         </section>
 
         <section class="informations scroll-snap">
-                <div class="header" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="50" data-aos-once="true">
+                <div class="header" >
                     <h3 class="title text-xxlarge" id="contact">FILIAIS</h3>
                     <br/>
                     <p class="text text-large">
@@ -295,7 +293,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contacts" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" data-aos-once="true">
+                <div class="contacts" >
                     <a href="https://www.instagram.com/benavidesefrancoadv/" target="_blank" class="link">
                         <i class="icon fa-brands fa-instagram fa-2x"></i>
                     </a> 
