Adicionar imagens de ultima geração

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div
               class="card"
               title="Card área administrativo"
-              style="background-image: url(./assets/background-cards/adm.jpg)"
+              style="background-image: url(./assets/background-cards/adm.webp)"
             >
               <div class="bg">
                 <span class="text-large">ADMINISTRATIVO</span>
@@ -198,7 +198,7 @@
               class="card"
               title="Card área agronegócio"
               style="
-                background-image: url(./assets/background-cards/agricultura.jpg);
+                background-image: url(./assets/background-cards/agricultura.webp);
               "
             >
               <div class="bg">
@@ -208,7 +208,7 @@
             <div
               class="card"
               title="Card área Educacional"
-              style="background-image: url(./assets/background-cards/edu.jpg)"
+              style="background-image: url(./assets/background-cards/edu.webp)"
             >
               <div class="bg">
                 <span class="text-large">EDUCACIONAL</span>
@@ -218,7 +218,7 @@
               class="card"
               title="Card área Empresarial"
               style="
-                background-image: url(./assets/background-cards/empresarial.jpg);
+                background-image: url(./assets/background-cards/empresarial.webp);
               "
             >
               <div class="bg">
@@ -230,7 +230,9 @@
             <div
               class="card"
               title="Card área Penal"
-              style="background-image: url(./assets/background-cards/penal.jpg)"
+              style="
+                background-image: url(./assets/background-cards/penal.webp);
+              "
             >
               <div class="bg">
                 <span class="text-large">PENAL</span>
@@ -240,7 +242,7 @@
               class="card"
               title="Card área trabalhista"
               style="
-                background-image: url(./assets/background-cards/trabalhista.jpg);
+                background-image: url(./assets/background-cards/trabalhista.webp);
               "
             >
               <div class="bg">
@@ -250,7 +252,9 @@
             <div
               class="card"
               title="Card área societário"
-              style="background-image: url(./assets/background-cards/socio.jpg)"
+              style="
+                background-image: url(./assets/background-cards/socio.webp);
+              "
             >
               <div class="bg">
                 <span class="text-large">SOCIETÁRIO</span>
@@ -259,7 +263,7 @@
             <div
               class="card"
               title="Card área LGPD"
-              style="background-image: url(./assets/background-cards/lgpd.jpg)"
+              style="background-image: url(./assets/background-cards/lgpd.webp)"
             >
               <div class="bg">
                 <span class="text-large">LEI DE PROTEÇÃO DE DADOS (LEGPD)</span>
@@ -271,7 +275,7 @@
               class="card"
               title="Card área tributário"
               style="
-                background-image: url(./assets/background-cards/tributacao.jpg);
+                background-image: url(./assets/background-cards/tributacao.webp);
               "
             >
               <div class="bg">
@@ -282,7 +286,7 @@
               class="card"
               title="Card área terceiro setor"
               style="
-                background-image: url(./assets/background-cards/terceiro.jpg);
+                background-image: url(./assets/background-cards/terceiro.webp);
               "
             >
               <div class="bg">
@@ -293,7 +297,7 @@
               class="card"
               title="Card área relações governamentais"
               style="
-                background-image: url(./assets/background-cards/governo.jpg);
+                background-image: url(./assets/background-cards/governo.webp);
               "
             >
               <div class="bg">
@@ -304,7 +308,7 @@
               class="card"
               title="Card área Internacional e arbitragem"
               style="
-                background-image: url(./assets/background-cards/internacional.jpg);
+                background-image: url(./assets/background-cards/internacional.webp);
               "
             >
               <div class="bg">
